# centernet-lightning

./: .gitignore  LICENSE  README.md  backbones.py  backbones_test.py  datasets.py  datasets_test.py  environment.yml  eval_coco.py  export_torchscript.py  losses.py  losses_test.py  metrics.py  metrics_test.py  model.py  model_test.py  pytest.ini  requirements.txt  setup.cfg  test_centernet.py  train.py  utils.py  utils_test.py
centernet_lightning/datasets/: __init__.py  builder.py  coco.py  crowdhuman.py  detection_for_tracking.py  inference.py  mot.py  transforms.py  utils.py
centernet_lightning/eval/: __init__.py  coco.py
centernet_lightning/evaluators/: coco.py
centernet_lightning/losses/: __init__.py  box_losses.py  heatmap_losses.py  iou_loss.py
centernet_lightning/models/: __init__.py  backbones.py  base.py  basics.py  centernet.py  decoders.py  fairmot.py  heads.py  layers.py  lightning_wrapper.py  meta.py  necks.py  tracker.py
centernet_lightning/utils/: __init__.py  box.py  config.py  image_annotate.py
configs/: base.yaml  base_resnet34.yaml  base_resnet34_fpn.yaml  base_tracking_resnet34_fpn.yaml  centernet.yaml  coco_mobilenetv3_large.yaml  coco_resnet18.yaml  coco_resnet18_fpn.yaml  coco_resnet34.yaml  coco_resnet34_fpn.yaml  coco_resnet50.yaml  coco_resnet50_fpn.yaml  crowdhuman_tracking.yaml  debug.yaml  helmet.yaml  helmet_resnet34.yaml  mot_tracking.yaml  test_config.yaml  voc2012_resnet34.yaml
configs/dataset/: coco_train.yaml  coco_val.yaml
configs/optimizer/: adamw.yaml  (+1 more)
docs/: datasets.md  experiments.md  implementation.md  install.md  model_zoo.md  training.md
rknn/: utils.py
tests/: test_backbones.py  test_datasets.py  test_heads.py  test_losses.py  test_models.py  test_necks.py  test_utils.py
tools/: export.py
(+47 files in other folders)
