[metadata]
name = centernet-lightning
version = 0.0.1
author = Thien Tran
description = CenterNet with PyTorch Lightning
url = https://github.com/gau-nernst/centernet-lightning

[options]
packages = find:
install_requires =
    torch>=1.6.0
    torchvision
    numpy
    scipy
    filterpy
    cython
    pytorch-lightning
    opencv-python
    albumentations>=1.0.0
    pycocotools @ git+https://github.com/gautamchitnis/cocoapi.git@cocodataset-master#subdirectory=PythonAPI
    trackeval @ git+https://github.com/gau-nernst/TrackEval.git
