[metadata]
name = centernet-lightning
version = 0.0.2
author = Thien Tran
description = CenterNet with PyTorch Lightning
url = https://github.com/gau-nernst/centernet-lightning

[options]
packages = find:
install_requires =
    torch>=1.10.0
    torchvision>=0.11.0
    numpy
    scipy
    filterpy
    pytorch-lightning
    opencv-python
    albumentations>=1.0.0
    pycocotools
    trackeval @ git+https://github.com/JonathonLuiten/TrackEval.git
    vision-toolbox @ git+https://github.com/gau-nernst/vision-toolbox.git
